--- a/about.html
+++ b/about.html
@@ -243,7 +243,7 @@
       <h2>Meet Our Team & Roles</h2>
       <div class="team-members">
         <div class="team-member">
-          <img src="./images/aslam.jpg" alt="Md. Aslam" class="profile-img" />
+          <img src="aslam.jpg" alt="Md. Aslam" class="profile-img" />
           <h3>Md. Aslam</h3>
           <p>Role: Lead Developer</p>
           <p>ID: 23HU1A0584</p>
@@ -254,7 +254,7 @@
           </div>
         </div>
         <div class="team-member">
-          <img src="./images/naveen.jpg" alt="P. Naveen Reddy" class="profile-img" />
+          <img src="naveen.jpg" alt="P. Naveen Reddy" class="profile-img" />
           <h3>P. Naveen Reddy</h3>
           <p>Role: UI/UX Designer</p>
           <p>ID: 23HU1A05A4</p>
@@ -265,7 +265,7 @@
           </div>
         </div>
         <div class="team-member">
-          <img src="./images/charam.jpg" alt="T. Charan" class="profile-img" />
+          <img src="charam.jpg" alt="T. Charan" class="profile-img" />
           <h3>T. Charan</h3>
           <p>Role: Backend Developer</p>
           <p>ID: 23HU1A05E4</p>
@@ -277,7 +277,7 @@
         </div>
         
         <div class="team-member">
-          <img src="./images/shifa.jpg" alt="SK. Shifa Sadiyah" class="profile-img" />
+          <img src="shifa.jpg" alt="SK. Shifa Sadiyah" class="profile-img" />
           <h3>SK. Shifa Sadiyah</h3>
           <p>Role: Project Analyst</p>
           <p>ID: 23HU1A05D0</p>
@@ -288,7 +288,7 @@
           </div>
         </div>
         <div class="team-member">
-          <img src="./images/sankar.jpg" alt="P. Siva Sankar" class="profile-img" />
+          <img src="sankar.jpg" alt="P. Siva Sankar" class="profile-img" />
           <h3>P. Siva Sankar</h3>
           <p>Role: Security Specialist</p>
           <p>ID: 23HU1A05A7</p>
