--- a/team.html
+++ b/team.html
@@ -357,7 +357,7 @@
       <h2>Meet Our Team & Roles</h2>
       <div class="team-members">
         <div class="team-member">
-          <img src="./images/aslam.jpg" alt="Md. Aslam" class="profile-img" />
+          <img src="aslam.jpg" alt="Md. Aslam" class="profile-img" />
           <h3>Md. Aslam</h3>
           <p>Role: Lead Developer</p>
           <p>ID: 23HU1A0584</p>
@@ -376,7 +376,7 @@
           </div>
         </div>
         <div class="team-member">
-          <img src="./images/naveen.jpg" alt="P. Naveen Reddy" class="profile-img" />
+          <img src="naveen.jpg" alt="P. Naveen Reddy" class="profile-img" />
           <h3>P. Naveen Reddy</h3>
           <p>Role: UI/UX Designer</p>
           <p>ID: 23HU1A05A4</p>
@@ -393,7 +393,7 @@
           </div>
         </div>
         <div class="team-member">
-          <img src="./images/charam.jpg" alt="T. Charan" class="profile-img" />
+          <img src="charam.jpg" alt="T. Charan" class="profile-img" />
           <h3>T. Charan</h3>
           <p>Role: Backend Developer</p>
           <p>ID: 23HU1A05E4</p>
@@ -411,7 +411,7 @@
         </div>
         
         <div class="team-member">
-          <img src="./images/shifa.jpg" alt="SK. Shifa Sadiyah" class="profile-img" />
+          <img src="shifa.jpg" alt="SK. Shifa Sadiyah" class="profile-img" />
           <h3>SK. Shifa Sadiyah</h3>
           <p>Role: Project Analyst</p>
           <p>ID: 23HU1A05D0</p>
@@ -428,7 +428,7 @@
           </div>
         </div>
         <div class="team-member">
-          <img src="./images/sankar.jpg" alt="P. Siva Sankar" class="profile-img" />
+          <img src="sankar.jpg" alt="P. Siva Sankar" class="profile-img" />
           <h3>P. Siva Sankar</h3>
           <p>Role: Security Specialist</p>
           <p>ID: 23HU1A05A7</p>
@@ -452,22 +452,22 @@
       <h2>E-commerce Product Showcase</h2>
       <div class="product-grid">
         <div class="product-card">
-          <img src="./images/wheat.jpg" alt="Organic Wheat" class="product-img" />
+          <img src="wheat.jpg" alt="Organic Wheat" class="product-img" />
           <h3>Organic Wheat</h3>
           <p>Fresh organically grown wheat directly from the farms.</p>
         </div>
         <div class="product-card">
-          <img src="./images/veg.jpg" alt="Fresh Vegetables" class="product-img" />
+          <img src="veg.jpg" alt="Fresh Vegetables" class="product-img" />
           <h3>Fresh Vegetables</h3>
           <p>A wide variety of seasonal vegetables ensuring farm-fresh quality.</p>
         </div>
         <div class="product-card">
-          <img src="./images/fruits.jpg" alt="Ripe Fruits" class="product-img" />
+          <img src="fruits.jpg" alt="Ripe Fruits" class="product-img" />
           <h3>Ripe Fruits</h3>
           <p>Quality fruits sourced directly from orchards.</p>
         </div>
         <div class="product-card">
-          <img src="./images/download (1).jpg" alt="Grains & Pulses" class="product-img" />
+          <img src="download (1).jpg" alt="Grains & Pulses" class="product-img" />
           <h3>Grains & Pulses</h3>
           <p>Nutritious grains and pulses with the best farm standards.</p>
         </div>
